Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
proton-c-0.23.0
-
None
Description
To use an ANONYMOUS-RELAY capable container, the client must create a sender link with no target address. This is not the same as target address of "" the empty string. In proton-C this means setting the address to NULL, but the C++ API defines:
open_sender(std::string addr, sender_options)
For dynamic receiver addresses, which also require a missing address field, we use this in the C++ API:
open_receiver("", receiver_options().source(source_options().dynamic(true)));
The dynamic(true) option causes the addr parameter to be ignored and a NULL address set in proton-C.
We need to add an "anonymous" boolean option with similar effect.