PROTON-1863: [cpp] need support for anonymous termini

Added anonymous() to source/target_options, sets the address to NULL.
Also fixed the dynamic() option to set the address to NULL.