cpp/include/proton/source_options.hpp
@@ -63,6 +63,11 @@ class source_options {
     /// ignored.
     PN_CPP_EXTERN source_options& dynamic(bool);
 
+    /// Request an anonymous node on the remote peer.
+    /// The default is false.  Any specified target address() is
+    /// ignored if true.
+    PN_CPP_EXTERN source_options& anonymous(bool);
+
     /// Control whether messages are browsed or consumed.  The
     /// default is source::MOVE, meaning consumed.
     PN_CPP_EXTERN source_options& distribution_mode(enum source::distribution_mode);
